crates/oxc_isolated_declarations/tests/snapshots/empty-export.snap
---
source: crates/oxc_isolated_declarations/tests/mod.rs
input_file: crates/oxc_isolated_declarations/tests/fixtures/empty-export.ts
---
==================== .D.TS ====================

type A = string;
export declare function a(): A;
export {};
