crates/oxc_isolated_declarations/tests/snapshots/empty-export2.snap
---
source: crates/oxc_isolated_declarations/tests/mod.rs
input_file: crates/oxc_isolated_declarations/tests/fixtures/empty-export2.ts
---
==================== .D.TS ====================

export {};
