crates/oxc_isolated_declarations/tests/snapshots/enum-runtime-initializer.snap
---
source: crates/oxc_isolated_declarations/tests/mod.rs
input_file: crates/oxc_isolated_declarations/tests/fixtures/enum-runtime-initializer.ts
---
```
==================== .D.TS ====================

export declare enum BadEnum {
	A,
	B
}
export declare const enum BadConstEnum {
	A,
	B
}
export declare const enum TemplateEnum {
	NoSubstitution = "constant",
	WithConstantSubstitution = "prefixfoo",
	WithConstantIdentifierSubstitution = "prefix123",
	WithRuntimeSubstitution
}


==================== Errors ====================

  x TS2474: const enum member initializers must be constant expressions.
   ,-[7:7]
 6 | export const enum BadConstEnum {
 7 |   A = Math.random(),
   :       ^^^^^^^^^^^^^
 8 |   B = A + 1,
   `----

  x TS2474: const enum member initializers must be constant expressions.
   ,-[8:7]
 7 |   A = Math.random(),
 8 |   B = A + 1,
   :       ^^^^^
 9 | }
   `----

  x TS2474: const enum member initializers must be constant expressions.
    ,-[17:29]
 16 |   WithConstantIdentifierSubstitution = `prefix${foo}`,
 17 |   WithRuntimeSubstitution = `prefix${Math.random()}`,
    :                             ^^^^^^^^^^^^^^^^^^^^^^^^
 18 | }
    `----


```
