crates/oxc_isolated_declarations/tests/snapshots/enum-surrogate-member-reference.snap
---
source: crates/oxc_isolated_declarations/tests/mod.rs
input_file: crates/oxc_isolated_declarations/tests/fixtures/enum-surrogate-member-reference.ts
---
```
==================== .D.TS ====================

export declare const enum Values {
	"\ud800" = 1,
	"\udc00" = 2,
	Lead = 1,
	Trail = 2,
	"a\ud800b" = "value",
	Text = "value"
}
