crates/oxc_isolated_declarations/tests/snapshots/expando-function-ambient-variable.snap
---
source: crates/oxc_isolated_declarations/tests/mod.rs
input_file: crates/oxc_isolated_declarations/tests/fixtures/expando-function-ambient-variable.ts
---
```
==================== .D.TS ====================

declare const f: () => void;
declare namespace f {
	let property: number;
}


==================== Errors ====================

  x TS9023: Assigning properties to functions without declaring them is not
  | supported with --isolatedDeclarations. Add an explicit declaration for the
  | properties assigned to this function.
   ,-[7:1]
 6 | 
 7 | f.property = 1;
   : ^^^^^^^^^^
   `----


```
