crates/oxc_isolated_declarations/tests/snapshots/expando-function-strip-internal-overload.snap
---
source: crates/oxc_isolated_declarations/tests/mod.rs
input_file: crates/oxc_isolated_declarations/tests/fixtures/expando-function-strip-internal-overload.ts
---
```
==================== .D.TS ====================

export declare function f(): void;


==================== Errors ====================

  x TS9023: Assigning properties to functions without declaring them is not
  | supported with --isolatedDeclarations. Add an explicit declaration for the
  | properties assigned to this function.
   ,-[6:1]
 5 | 
 6 | f.property = 1;
   : ^^^^^^^^^^
   `----


```
