crates/oxc_isolated_declarations/tests/snapshots/expando-function-strip-internal.snap
---
source: crates/oxc_isolated_declarations/tests/mod.rs
input_file: crates/oxc_isolated_declarations/tests/fixtures/expando-function-strip-internal.ts
---
```
==================== .D.TS ====================
